<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<<< HEAD:app/src/main/res/layout/activity_intro.xml
    android:background="@drawable/sub"

    tools:context=".Activity.IntroActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/enjoy_eating"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="50dp"
        android:text="@string/all_the_delicious_food_on_your_phone"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:src="@drawable/pizza1"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_delivery_app"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
========
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/lavender"
    tools:context=".Activity.MainActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/app_name"
                android:textSize="24sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <Spinner
                android:id="@+id/spinner_tags"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:entries="@array/tags"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>


    <androidx.cardview.widget.CardView
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/lavender"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView_home"
            app:iconifiedByDefault="false"
            app:searchIcon="@drawable/search"
            app:queryHint="Search your recipe..."
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler_random"
      android:layout_margin="4dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>
>>>>>>>> 78ac649 (Second1 Commit):app/src/main/res/layout/activity_main.xml


<<<<<<<< HEAD:app/src/main/res/layout/activity_intro.xml
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startBtn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"

        android:background="@drawable/white_button"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/get_started"
            android:textColor="#ff5e00"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
========
</LinearLayout>
>>>>>>>> 78ac649 (Second1 Commit):app/src/main/res/layout/activity_main.xml
